--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <h1> MI PRIMER HTML</H1>
 
-    <h3>Indice de contenidos</h3>
+    <h2>Indice de contenidos</h2>
 
     <u1>
         <li><a href="#"></a>HTML</li>
@@ -19,7 +19,7 @@
 
     <hr>
 
-    <h3>HTML</h3>
+    <h2>HTML</h2>
     <p>El laboratorio del CERN en Suiza es uno de los centros científicos más importantes del planeta, y como tal, estaba muy bien conectado con otras instituciones similares. Fue uno de los primeros en utilizar <a href= "https://es.wikipedia.org/wiki/ARPANET" alt="Por aqui se va a ARPANET" target="_blank"></a>, la predecesora de internet.</p>
     <p>Entre los 10,000 empleados del CERN repartidos por varios laboratorios, la comunicación era constante y necesaria, y se quejaban de que aún con el correo electrónico, disponible para ellos desde los años 80, no era suficiente para la cantidad de trabajo desarrollado, el número de usuarios y los datos intercambiados. Además, no todos los ordenadores de los usuarios utilizaban el mismo sistema operativo, lo que complicaba aún más las cosas. En resumidas cuentas, Berners-Lee y su equipo se pusieron manos a la obra para resolver el problema.</p>
     <p>Tomando como base ENQUIRE, un sistema de intercambio de datos creado por él mismo en su primera estancia en el CERN, Berners-Lee conectó el <a href="https://es.wikipedia.org/wiki/Hypertext_Transfer_Protocol" alt="Por aqui se va a HTTP" target="_blank">HTTP</a>, el sistema de enlaces en el que también había trabajado, con el <a href="https://es.wikipedia.org/wiki/Transmission_Control_Protocol" alt="Por aqui se va a TCP" target="_blank">TCP</a> el protocolo de control de transmisión creado unos 15 años antes. <b>Berners-Lee simplemente unió todos esos elementos ya existentes con el sistema de nombre de dominios</b> y <i>!voila!</i> Había nacido la “World Wide Web”.</p>
@@ -31,5 +31,6 @@
 
     <h2>La primer Web</h2>
     <p>fguhsdfg</p>
+    <p>fjdfjhdfsh</p>
 
 </body>
